--- a/apps/wallet-mobile/src/i18n/locales/pt-BR.json
+++ b/apps/wallet-mobile/src/i18n/locales/pt-BR.json
@@ -139,7 +139,7 @@
   "components.governance.actionDelegateToADRepTitle": "Delegate to a DRep",
   "components.governance.actionNoConfidenceDescription": "You are expressing a lack of trust for all proposals now and in the future.",
   "components.governance.actionNoConfidenceTitle": "No confidence",
-  "components.governance.actionYouHaveSelected": "You have selected <b>{action}</b> as your governance status. You can change it at any time by clicking in the card below.",
+  "components.governance.actionYouHaveSelected": "You have selected <b>{action}</b> as your governance status. You can change it at any time.",
   "components.governance.actionYouHaveSelectedTxPending": "You have selected <b>{action}</b> as your governance status.",
   "components.governance.changeDRep": "Change DRep",
   "components.governance.confirm": "Confirm",
@@ -156,7 +156,7 @@
   "components.governance.goToGovernance": "Go to Governance",
   "components.governance.goToStaking": "Go to staking",
   "components.governance.goToWallet": "Go to wallet",
-  "components.governance.governanceCentreTitle": "Governance centre",
+  "components.governance.governanceCentreTitle": "Governance dashboard",
   "components.governance.hardwareWalletSupportComingSoon": "Hardware wallet support coming soon",
   "components.governance.learnMoreAboutGovernance": "Learn more About Governance",
   "components.governance.operations": "Operations",
@@ -690,6 +690,7 @@
   "global.sign": "sign",
   "global.signTransaction": "Sign transaction",
   "global.spendingPassword": "Spending Password",
+  "global.exchange": "Exchange",
   "global.staking.epochLabel": "Época",
   "global.staking.stakePoolHash": "Hash do fundo",
   "global.staking.stakePoolName": "Nome do fundo",
@@ -702,6 +703,7 @@
   "global.totalAda": "Total ADA",
   "global.tryAgain": "Tente novamente ",
   "global.txLabels.amount": "Quantidade",
+  "global.txLabels.incorrectSpendingPassword": "Incorrect spending password",
   "global.txLabels.assets": "{cnt}{cnt, plural,one {ativo} other {ativos}}",
   "global.txLabels.balanceAfterTx": "Saldo após transação",
   "global.txLabels.confirmTx": "Confirmar transação",
@@ -858,5 +860,27 @@
   "toggleAnalyticsSettings.analyticsTitle": "Percepções do Usuário",
   "utils.format.today": "Hoje",
   "utils.format.unknownAssetName": "[Nome do ativo desconhecido]",
-  "utils.format.yesterday": "Ontem"
+  "utils.format.yesterday": "Ontem",
+  "rampOnOff.createRampOnOff.disclaimer": "Disclaimer",
+  "rampOnOff.createRampOnOff.contentDisclaimer": "Yoroi uses Banxa to provide direct Fiat-ADA exchange. By clicking “Proceed,” you also acknowledge that you will be redirected to our partner’s website, where you may be asked to accept their terms and conditions. Banxa may have buy and sell limitations depending on your location and your financial institution.",
+  "rampOnOff.createRampOnOff.buyCrypto": "Buy ADA",
+  "rampOnOff.createRampOnOff.sellCrypto": "Sell ADA",
+  "rampOnOff.createRampOnOff.amountTitle": "ADA amount",
+  "rampOnOff.createRampOnOff.providerFee": "Provider Fee",
+  "rampOnOff.createRampOnOff.provider": "Provider",
+  "rampOnOff.createRampOnOff.banxa": "Banxa",
+  "rampOnOff.rampOnOffScreen.rampOnOffTitle": "Exchange ADA",
+  "rampOnOff.resultRampOnOff.congrats": "Congrats🎉 Your ADA will come in a few minutes",
+  "rampOnOff.resultRampOnOff.cryptoAmountYouGet": "ADA amount you get",
+  "rampOnOff.resultRampOnOff.fiatAmountYouGet": "Fiat amount you sell",
+  "rampOnOff.resultRampOnOff.goToTransactions": "GO TO TRANSACTIONS",
+  "rampOnOff.resultRampOnOff.buySellCrypto": "Buy ADA/Sell transaction",
+  "rampOnOff.resultRampOnOff.descriptionBuySellADATransaction": "Normally the Buy ADA/Sell transaction takes 3-5 of minutes for the order to be fulfilled. However, there are instances where the order cannot be fulfilled instantly because the compliance team can be doing a manual verification of the KYC docs or any other issues.",
+  "rampOnOff.resultRampOnOff.contact": "Contact",
+  "rampOnOff.resultRampOnOff.and": "and",
+  "rampOnOff.resultRampOnOff.customerSupport": "Yoroi Customer Support",
+  "rampOnOff.resultRampOnOff.significant": "if you witnessed any significant transaction delays or errors.",
+  "rampOnOff.rampOnOffScreen.getFirstAda": "Welcome to Yoroi 👋️ Get your first ADA fast & easy",
+  "rampOnOff.rampOnOffScreen.needMoreAda": "Need more ADA for staking or swap?",
+  "rampOnOff.rampOnOffScreen.ourTrustedPartners": "Top up your wallet safely using our trusted partners"
 }
