--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -815,6 +815,7 @@
   "swap.swapScreen.limitPriceWarningYourPrice": "Your limit price",
   "swap.swapScreen.marketButton": "Market",
   "swap.swapScreen.marketPrice": "Market price",
+  "swap.swapScreen.marketPriceInfo": "Market price is the best price available on the market among several DEXes that lets you buy or sell an asset instantly.",
   "swap.swapScreen.noAssetsFound": "No assets found for this pair",
   "swap.swapScreen.noAssetsFoundFor": "No assets found for \"{search}\"",
   "swap.swapScreen.noPool": "This pair is not available in any liquidity pool",
@@ -823,6 +824,10 @@
   "swap.swapScreen.notEnoughSupply": "Not enough supply in the pool",
   "swap.swapScreen.openOrders": "Open orders",
   "swap.swapScreen.ordersSwapTab": "Orders",
+  "swap.swapScreen.priceImpact": "Price Impact",
+  "swap.swapScreen.priceImpactInfo": "Price impact is a difference between the actual market price and your price due to trade size.",
+  "swap.swapScreen.priceImpactRiskHigh": "Price impact over 10%",
+  "swap.swapScreen.priceImpactDescription": "may cause a significant loss of funds. Please bear this in mind and proceed with an extra caution.",
   "swap.swapScreen.poolFee": "DEX Fee",
   "swap.swapScreen.poolVerification": "{pool} verification",
   "swap.swapScreen.poolVerificationInfo": "Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
